# Homo_DeUS

./: .gitignore  .gitmodules  README.md  launch_all_nodes.bash  requirements.txt
Modules/: README.md
Modules/Deplacement/: README.md
Modules/Deplacement/approche_client/: CMakeLists.txt  package.xml  setup.py
Modules/Deplacement/approche_client/launch/: approche_client.launch
Modules/Deplacement/approche_client/python/approche_client/: approche_client.py
Modules/Deplacement/approche_client/scripts/: main_ApprocheClient.py
Modules/Deplacement/approche_client/src/: approche_client.py  perception_pose.py  pseudo_depthimage.py  pseudo_facedetection.py
Modules/HBBA/: README.md
Modules/HBBA/Include/hbba_lite/: HDDesires.h  HDStrategies.h  HDStrategy.h
Modules/HBBA/hbba_state/: CMakeLists.txt  package.xml
Modules/HBBA/hbba_state/State/: GoToTableState.cpp  GoToTableState.h  GreetingState.h  State.cpp  StateManager.cpp
Modules/HBBA/hbba_state/launch/: launch_for_homodeus.launch  state_test1.launch
Modules/HBBA/hbba_state/scripts/: filter_node.py
Modules/HBBA/hbba_state/src/: Demo1_main.cpp  StringUtils.h  Test_AccueilMotiv.cpp  test_state.cpp
Modules/HBBA/hbba_state/src/State/: DiscussionState.cpp  DiscussionState.h  DropState.cpp  DropState.h  GoToKitchenState.cpp  GoToKitchenState.h  GoToState.cpp  GoToState.h  GreetingState.cpp  IdleState.cpp  IdleState.h  InvalidTaskState.cpp  InvalidTaskState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  TakeState.cpp  TakeState.h  TalkState.cpp  TalkState.h  WaitAnswerState.cpp
Modules/HBBA/hbba_state/src/hbba_core/: HDDesires.cpp  HDDesires.h  HDStrategies.cpp  HDStrategies.h  HDStrategy.cpp  HDStrategy.h
Modules/HBBA/homodeus_common/homodeus_library/: CMakeLists.txt
Modules/HBBA/homodeus_common/homodeus_msgs/: CMakeLists.txt
Modules/HBBA/homodeus_common/homodeus_msgs/action/: Explore.action
Modules/HBBA/homodeus_commun/homodeus_library/: CMakeLists.txt
Modules/HBBA/homodeus_commun/homodeus_msgs/: package.xml
Modules/HBBA/homodeus_hbba_lite/: CMakeLists.txt  package.xml
Modules/HBBA/homodeus_hbba_lite/Include/homodeus_hbba_lite/: HDStrategies.h
Modules/HBBA/homodeus_hbba_lite/include/: HDStateIndexManager.h
Modules/HBBA/homodeus_hbba_lite/include/homodeus_hbba_lite/: HDDesires.h  HDMotivation.h  HDMotivations.h  HDStrategies.h  HDStrategy.h  HDStrategyToMotivationInterface.h
Modules/HBBA/homodeus_hbba_lite/launch/: launch_nav_selector.launch
Modules/HBBA/homodeus_hbba_lite/src/: HDDesires.cpp  HDMotivation.cpp  HDMotivations.cpp  HDStrategies.cpp  HDStrategy.cpp  HDStrategyToMotivationInterface.cpp
Modules/HBBA/src/hbba_lite_cpp/core/: HDDesires.cpp  (+1 more)
Modules/Navigation/: CMakeLists.txt  package.xml
Modules/Navigation/NavSelector/: CMakeLists.txt  NavGoal.py  NavSelector.py  README.md  homodeus_precomp.py  package.xml  setup.py
Modules/Navigation/NavSelector/launch/: nav_selector_test.launch
Modules/Navigation/NavSelector/python/NavSelector/: NavGoal.py  NavGoalDeserializer.py  NavSelector.py
Modules/Navigation/NavSelector/python/NavigationSelector/: NavGoalDeserializer.py  NavSelector.py
Modules/Navigation/NavSelector/scripts/: fake_navGoal_publisher.py  main_navSelector.py  predefNavGoal.json  test_main_selector.py
Modules/Navigation/base_navigation/: BaseRotate.py  CMakeLists.txt  README.md  main_baseRotate.py  packages.xml  setup.py
Modules/Navigation/base_navigation/launch/: base_navigation.launch
Modules/Navigation/base_navigation/python/base_navigation/: BaseRotate.py  perception_pose.py
Modules/Navigation/base_navigation/scripts/: main_baseRotate.py
Modules/Préhension/: README.md
Modules/Préhension/homodeus_prehension/: CMakeLists.txt  COMMANDS.txt  MOVEIT FIX.txt  package.xml  readme.md
Modules/Préhension/homodeus_prehension/cfg/: region.cfg  segment.cfg
Modules/Préhension/homodeus_prehension/config/: pcl_cylinder.rviz  pcl_object_detector.rviz
Modules/Préhension/homodeus_prehension/include/homodeus_arm_interface/: ArmInterface.h  ArmInterfaceNode.h
Modules/Préhension/homodeus_prehension/launch/: cylinder_detector.launch  main_plane_detector.launch  object_segmentation.launch  pcl_region.launch  pcl_segment.launch  prehension_with_detection.launch  segment_table.launch
Modules/Préhension/homodeus_prehension/src/: ArmInterface.cpp  geometry.cpp  homodeus_arm_interface_node.cpp  pcl_filters.cpp  tf_transforms.cpp
Modules/Préhension/homodeus_prehension/src/nodes/: object_detector.cpp  segment_table.cpp
Modules/Scenarios/: CMakeList.txt  CMakeLists.txt  package.xml
Modules/Scenarios/launch/: AccueilClient.launch
Modules/Vision/: PrepareMsgObjectsDetection.py  README.md
catkin_ws/: README.md
catkin_ws/src/HD_audio/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/HD_audio/launch/: hd_audio.launch  one_discuss.launch
catkin_ws/src/HD_audio/src/: cmd_idiot.txt  hdTTS.py  oneDiscuss.py  requirements.txt  talk.py
catkin_ws/src/audio_package/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/audio_package/src/: discuss.py  discussInterface.py  hdTTS.py  newTranscribe.py  oneDiscuss.py  requirements.txt  talkInterface.py  transcribe.py
catkin_ws/src/base_navigation/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/base_navigation/launch/: nav_simul.launch
catkin_ws/src/base_navigation/scripts/: README.md
catkin_ws/src/base_navigation/src/: README.md
catkin_ws/src/homodeus_common/: README.md
catkin_ws/src/homodeus_common/homodeus_library/: package.xml  setup.py
catkin_ws/src/homodeus_common/homodeus_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/homodeus_common/maps/: README.md
catkin_ws/src/homodeus_common/worlds/: 3it_cafe.world
catkin_ws/src/homodeus_commun/homodeus_library/: package.xml
catkin_ws/src/homodeus_commun/homodeus_library/python/homodeus_library/: homodeus_precomp.py
catkin_ws/src/homodeus_commun/homodeus_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/pseudo_detection/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
catkin_ws/src/pseudo_detection/src/: pseudo_detection.cpp
(+236 files in other folders)
