<?xml version="1.0"?>
<package format="2">
  <name>homodeus_hbba_lite</name>
  <version>0.0.0</version>
  <description>The homodeus_hbba_lite package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fuck@todo.todo">fuck</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hbba_lite</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>hbba_lite</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>hbba_lite</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
