<?xml version="1.0"?>
<package format="2">
  <name>NavSelector</name>
  <version>0.0.7</version>
  <description>Nav Selector from homodeus</description>
  <maintainer email="homodeus@usherbrooke.ca">HomoDeUS</maintainer>
  <license>Modified BSD</license>
  <!-- <author email="enrique.fernandez@pal-robotics.com">Enrique Fernandez</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <!-- link to find_package(catkin REQUIRED COMPONENTS -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>homodeus_library</build_depend>
  <build_depend>homodeus_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- link to catkin_package(CATKIN_DEPENDS -->
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>homodeus_library</build_export_depend>
  <build_export_depend>homodeus_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

</package>
