<?xml version="1.0"?>
<package>
  <name>pseudo_detection</name>
  <version>0.0.2</version>
  <description>Example on how to detect an object from robot camera and transform the bounding box to pose in world</description>

  <maintainer email="homodeus@usherbrooke.ca">Homo DeUS</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>homodeus_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- <run_depend>roscpp</run_depend> -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>homodeus_msgs</run_depend>
  <!-- <run_depend>image_geometry</run_depend> -->
  <!-- <run_depend>image_transport</run_depend> -->
  <run_depend>sensor_msgs</run_depend>
  <!-- <run_depend>tf</run_depend> -->
  <!-- <run_depend>cv_bridge</run_depend> -->

</package>
